[package]
name = "brightcollection"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brightcollection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
mpl-token-metadata = {version = "1.2.5", features = ["no-entrypoint"]}

